syntax = "proto3";

package microkube_autoscaler;

message EmptyRequest {
}

message BoolResponse {
  bool value = 1;
}

service Autoscaler {
  rpc IsReady(EmptyRequest) returns (BoolResponse) {}
}
